Remove references to mining, market-making, july 4th reward distribution

--- a/_includes/intro-who.html
+++ b/_includes/intro-who.html
@@ -32,9 +32,9 @@
         <div class="col-sm-12 mtl">
         <div class="col-md-6">
             <img src="/images/who/ico-who-4.svg" >
-          <h3>Market-Makers</h3>
+          <h3>Traders</h3>
           <hr class="steemer-l">
-          <p>Earn the spread by helping make the market between Steem and Steem Dollars on the blockchain-based exchange with its built in maker-taker incentives</p>
+          <p>Earn the spread by helping make the market between Steem and Steem Dollars on the blockchain-based decentralized exchange</p>
             <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
         </div>
         <div class="col-md-6">
