--- a/_includes/intro-ex.html
+++ b/_includes/intro-ex.html
@@ -5,21 +5,41 @@
               <hr class="steemer">
 <div class="col-sm-12">
   <div class="row">
-            <a target="_blank" href="https://bitshares.openledger.info/#/market/OPEN.STEEM_BTC">
-               <div class="col-sm-6">
-                      <span class="box1">
-                        <img class="img-responsive" src="../images/exchanges/ex-ol.png">
-                       </span>
-               </div>
-             </a>
-            <a target="_blank" href="https://bittrex.com/Market/Index?MarketName=BTC-STEEM">
-           <div class="col-sm-6">
-                  <span class="box1">
-                    <img class="img-responsive" src="../images/exchanges/ex-bittrex.png">
-                   </span>
-           </div>
-             </a>
+            <!-- Poloniex -->
+            <a target="_blank" href="https://poloniex.com/exchange#btc_steem">
+                <div class="col-sm-6">
+                    <span class="box1">
+                        <img class="img-responsive" src="../images/exchanges/ex-polo.png">
+                    </span>
+                </div>
+            </a>
 
+            <!-- Openledger -->
+            <a target="_blank" href="https://bitshares.openledger.info/market/OPEN.STEEM_OPEN.BTC">
+               <div class="col-sm-6">
+                    <span class="box1">
+                        <img class="img-responsive" src="../images/exchanges/ex-ol.png">
+                    </span>
+               </div>
+            </a>
+
+            <!-- Bittrex -->
+            <a target="_blank" href="https://bittrex.com/Market/Index?MarketName=BTC-STEEM">
+                <div class="col-sm-6">
+                    <span class="box1">
+                        <img class="img-responsive" src="../images/exchanges/ex-bittrex.png">
+                    </span>
+                </div>
+            </a>
+
+            <!-- Shapeshift -->
+            <a target="_blank" href="https://shapeshift.io/#/coins">
+                <div class="col-sm-6">
+                    <span class="box1">
+                        <img class="img-responsive" src="../images/exchanges/ex-shapeshift.png">
+                    </span>
+                </div>
+            </a>
   </div> <!-- .row -->
 
 </div><!-- .span6 -->
