--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   <ul class="row menu nav">
   <div class="container">
 
@@ -43,7 +43,7 @@
    </ul>
      </div>
 
-</footer>
+</footer> -->
 
  <script src="/js/bootstrap.js"></script>
  <script src="/js/main.js"></script>
