New SMT section and updating Whitepaper to Bluepaper

--- a/_includes/intro-doc.html
+++ b/_includes/intro-doc.html
@@ -8,17 +8,30 @@
         </div>
         <div class="col-sm-12 mtm text-center pbl mbl">
 
-          <h2>Steem White Paper</h2>
+          <h2>Steem Bluepaper</h2>
           <hr class="steemer">
-                    <img class="img-responsive img-retina" src="../images/frontpage/img-wp.svg" />
+            <img class="img-responsive img-retina" src="../images/frontpage/img-wp.svg" />
 
-          <p>
+          <p class="intro-text">
             Collectively, user-generated content has created billions of dollars worth of value for the shareholders of social media companies, such as Reddit, Facebook, and Twitter. Steem supports social media and online communities by returning much of its value to the people who provide contributions by rewarding them with virtual currency.
           </p>
           <p>
-            <a class="btn  btn-primary" href="/SteemWhitePaper.pdf" target="_blank">Download</a>
+            <a class="btn  btn-primary" href="/steem-bluepaper.pdf" target="_blank">Download</a>
           </p>
         </div>
+
+        <div class="col-sm-12 mtm text-center pbl mbl">
+          <a name="smt" />&nbsp;</a>
+          <h2>Smart Media Tokens</h2>
+          <hr class="steemer">
+          <img class="img-responsive img-smt img-retina" src="../images/smts.svg" />
+          <p class="intro-text">
+            A Smart Media Token (SMT) is a native digital asset on the Steem blockchain that can be quickly launched by anyone to help monetize online content and create incentives to encourage desired user behavior via built-in &lsquo;Proof-of-Brain&rsquo; algorithms.
+          </p>
+          <p>
+            <a class="btn  btn-primary" href="https://smt.steem.io" target="_blank">Learn more</a>
+          </p>
+        </div>        
         <!--   <div class="col-sm-12 col-md-6  mtl text-center">
           <h3>Convertible Notes as a Cryptocurrency</h3>
           <p>Convertible notes are short-term debt instruments that can be converted to equity at a rate determined in the future. A blockchain based token can be viewed as equity in the blockchain whereas a convertible note can be viewed …
