--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,8 @@
             {% endif %}
             <li><a href="/#join">Join</a></li>
             <li><a href="/#video">Video</a></li>
-            <li><a href="/#whitepaper">White Paper</a></li>
+            <li><a href="/#whitepaper">Bluepaper</a></li>
+            <li><a href="/#smt">SMTs</a></li>
             <li><a href="/#faq">FAQ</a></li>
             <li><a  href="/#rewards">Rewards</a></li>
             <li><a  href="/#exchanges">Exchanges</a></li>
