--- a/css/style.scss
+++ b/css/style.scss
@@ -1235,3 +1235,12 @@ h4 {
   -webkit-animation-delay: 2s;
   -webkit-animation-iteration-count: infinite;
 }
+
+.intro-text {
+	max-width: 600px;
+	margin: 1.4em auto;
+}
+
+.img-smt {
+	width: 320px;
+}
